--- a/adminv2/templates/adminv2/cms/index.html
+++ b/adminv2/templates/adminv2/cms/index.html
@@ -6,16 +6,13 @@
 {% block section_title %} CMS Content {% endblock %}
 
 {% block content %} 
-    <div>
-        
-    </div>
-
     
     <div id="cms-container" x-data="{
         activeTab: '{% url 'adminv2:testimonial-partial' %}',
         templates : {
             '{% url 'adminv2:testimonial-partial' %}': 'Testimonials',
             '{% url 'adminv2:faqs-partial' %}': 'FAQs',
+            '{% url 'adminv2:team-partial' %}': 'Team',
         },
         loadTemplate(url){
             this.activeTab = url;
@@ -37,7 +34,13 @@
             <ul class="flex flex-wrap -mb-px">
                 <template x-for="[url, label] in Object.entries(templates)" :key="url">
                     <li class="me-2">
-                        <a href="#" class="inline-block p-4 border-b-2 border-transparent rounded-t-lg hover:text-gray-600 hover:border-gray-300" :class="{ 'text-blue-600 border-b-2 border-blue-600 rounded-t-lg active': activeTab === url }" @click.prevent="loadTemplate(url)" x-text="label"></a>
+                        <button 
+                            class="inline-block cursor-pointer py-2 px-4 rounded-xl hover:text-gray-600 hover:border-gray-300" 
+                            :class="activeTab === url
+                                ? 'border-2 text-blue-600 border-blue-600 active'
+                                : 'border-b-2 border-transparent'" 
+                            @click.prevent="loadTemplate(url)" x-text="label">
+                        </button>
                     </li>
                 </template>
             </ul>
@@ -70,6 +73,31 @@
             </div>
         </section>
         
+    {% endfill %}
+{% endcomponent %}
+
+
+
+{% component "modal" modal_type="delete_member_modal" modal_title="Delete Member" %}
+    {% fill "children" %}
+        <section class="flex flex-col gap-6 py-4 px-6">
+            <div>
+                <div class="font-semibold">Are you sure you want to delete this member?</div>
+                <div class="text-sm">This action cannot be undone.</div>
+            </div>
+
+            <div class="flex self-start gap-6">
+                <button class="delete-btn btn bg-red-600 text-white">Delete</button>
+                <button class="btn tertiary-btn" onclick='closeModal_delete_member_modal()'>Cancel</button>
+            </div>
+        </section>
+        
+    {% endfill %}
+{% endcomponent %}
+
+{% component "modal" modal_type="team_member_form" modal_title="Team Form" %}
+    {% fill 'children' %}
+    <div class="modal-body overflow-y-auto max-h-[80vh] px-4 py-6"></div>
     {% endfill %}
 {% endcomponent %}
 
@@ -271,7 +299,7 @@
         .catch(error => console.log("Error:", error))
     }
 
-    function openDeleteModal(e){
+    function openDeleteTestimonialModal(e){
         const element = e.target;
         const data_id = element.getAttribute('data-id');
         const modal = document.getElementById("modal-delete_testimonial_modal")
@@ -282,7 +310,210 @@
         }
         openModal_delete_testimonial_modal();
     }
+
+    function openDeleteMemberModal(e){
+        const element = e.target;
+        const data_id = element.getAttribute('data-id');
+        const modal = document.getElementById("modal-delete_member_modal")
+        const del_btn = modal.querySelector('.delete-btn')
+        console.log(del_btn)
+        del_btn.onclick = function(){
+            deleteMember(event, data_id)
+        }
+        openModal_delete_member_modal();
+    }
     
+
+    function view_add_member_form(){
+        url = "{% url 'adminv2:add-member-form' %}"
+
+        fetch(url, {
+            method: "GET",
+            headers: {
+            "X-Requested-With": "XMLHttpRequest",
+            }
+        })
+        .then(response => response.text())
+        .then(data => {
+            // since the data is a full html stuff, we need to extract the innerHTML of the body
+            let parser = new DOMParser();
+            let doc = parser.parseFromString(data, 'text/html');
+            let form = doc.body.innerHTML;
+            let modal = document.getElementById('modal-team_member_form')
+
+            injectHTMLWithScripts(modal.querySelector('.modal-body'), form);
+            //modal.querySelector('.modal-body').innerHTML = form;
+            openModal_team_member_form();
+
+        })
+        .catch(error => console.log("Error:", error))
+    }
+
+
+    function view_edit_member_form(id){
+        url = "{% url 'adminv2:edit-member-form' 123 %}".replace('123', id);
+
+        fetch(url, {
+            method: "GET",
+            headers: {
+            "X-Requested-With": "XMLHttpRequest",
+            }
+        })
+        .then(response => response.text())
+        .then(data => {
+            // since the data is a full html stuff, we need to extract the innerHTML of the body
+            let parser = new DOMParser();
+            let doc = parser.parseFromString(data, 'text/html');
+            let form = doc.body.innerHTML;
+            let modal = document.getElementById('modal-team_member_form')
+
+            modal.querySelector('.modal-body').innerHTML = form;
+            openModal_team_member_form();
+
+        })
+        .catch(error => console.log("Error:", error))
+    }
+
+    function submitTeamMemberForm(event){
+        event.preventDefault();
+        const form = event.target;
+        const formData = new FormData(form)
+
+        const submitBtn = form.querySelector('button[type="submit"]');
+        let originalText = submitBtn.innerHTML;
+        submitBtn.innerHTML = `<i class="fa fa-spinner fa-spin"></i>`;
+        submitBtn.disabled = true;     
+
+        console.log(form.action)
+        fetch(form.action, {
+            method: "POST",
+            body: formData,
+            headers: {
+                "X-Requested-With": "XMLHttpRequest",
+                "X-CSRFToken": getCsrfToken(),
+            },
+        })
+        .then(response => response.json())
+        .then(data => {
+            if(data.success){
+                showToastNotification('success', data.message)
+
+                // Refresh 
+                alpineContainer = Alpine.$data(cms_container);
+                activeTab = alpineContainer.activeTab
+                alpineContainer.loadTemplate(activeTab)
+
+                //close modal
+                closeModal_team_member_form();
+                
+            } else{
+                displayFormError(data.errors, form);
+                console.log(data.errors);
+                return;
+            }
+        })
+        .catch(error => {
+             console.error(error);
+             showToastNotification('danger', 'Something went wrong, please try again');
+        })
+        .finally(() => {
+            submitBtn.disabled = false;
+            submitBtn.innerHTML = originalText;
+        })
+
+    }
+
+
+    function updateTeamMember(event, testimonial_id){
+        event.preventDefault();
+        const form = event.target;
+        const formData = new FormData(form)
+
+        const submitBtn = form.querySelector('button[type="submit"]');
+        let originalText = submitBtn.innerHTML;
+        submitBtn.innerHTML = `<i class="fa fa-spinner fa-spin"></i> Updating...`;
+        submitBtn.disabled = true; 
+
+        fetch(form.action, {
+            method: "POST",
+            body: formData,
+            headers: {
+                "X-Requested-With": "XMLHttpRequest",
+                "X-CSRFToken": getCsrfToken(),
+            },
+        })
+        .then(response => response.json())
+        .then(data => {
+            if(data.success){
+                showToastNotification('success', data.message)
+
+                // Refresh 
+                alpineContainer = Alpine.$data(cms_container);
+                activeTab = alpineContainer.activeTab
+                alpineContainer.loadTemplate(activeTab)
+                
+                //close modal
+                closeModal_team_member_form();
+
+            } else{
+                displayFormError(data.errors, form);
+                console.log(data.errors);
+                return;
+            }
+        })
+        .catch(error => {
+             console.error(error);
+             showToastNotification('danger', 'Something went wrong, please try again');
+        })
+        .finally(() => {
+            submitBtn.disabled = false;
+            submitBtn.innerHTML = originalText;
+        })
+    }
+
+    
+    function deleteMember(event, id){
+        const url = '{% url 'cmscontent:delete-member' 123 %}'.replace("123", id);
+        
+        deleteBtn = event.currentTarget;
+        originalText = deleteBtn.innerHTML   
+        deleteBtn.disabled = true; 
+        deleteBtn.innerHTML = `<i class="fa fa-spinner fa-spin"></i> Deleting...`;
+        
+        fetch(url, {
+            method: "POST",
+            headers: {
+            "X-Requested-With": "XMLHttpRequest",
+            "X-CSRFToken": getCsrfToken()
+            }
+        })
+        .then(response => response.json())
+        .then(data => {
+            if(data.success){
+                showToastNotification('success', data.message)
+                
+                // Refresh 
+                alpineContainer = Alpine.$data(cms_container);
+                activeTab = alpineContainer.activeTab
+                alpineContainer.loadTemplate(activeTab)
+
+                //close modal
+                closeModal_delete_member_modal();         
+            } else{
+                console.error("Error", data.error)
+                showToastNotification('danger', 'Something went wrong, please try again')
+            }
+        })
+        .catch(error => {
+            console.error("Error", error) 
+            showToastNotification('danger', 'Something went wrong, please try again')
+        })
+        .finally(() => {
+            deleteBtn.disabled = false
+            deleteBtn.innerHTML = originalText
+        })
+    }
+
 </script>
 
 
