--- a/adminv2/templates/adminv2/base.html
+++ b/adminv2/templates/adminv2/base.html
@@ -9,7 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/alpinejs" defer></script>
+    {% comment %} <script src="https://unpkg.com/alpinejs" defer></script> {% endcomment %}
+    <script defer src="{% static 'js/alpine_component.js' %}"></script>
+    <!-- Alpine Plugins -->
+    <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/sort@3.x.x/dist/cdn.min.js"></script>
+    <!-- Alpine Core -->
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -84,11 +90,11 @@
         </nav>
 
         <!-- Main content -->
-        <div class="flex flex-col gap-7 lg:col-span-3 pt-2 px-4 h-[100vh]">
-            <header class="flex justify-between">
+        <div class="flex flex-col gap-7 lg:col-span-3 pt-2 px-4 min-h-[100vh]">
+            <header class="flex justify-between sticky">
                 <div>
-                    <h1 class="text-2xl font-bold">Admin Panel</h1>
-                    <h2 class="text-xl font-medium">
+                    <h1 class="text-3xl font-bold">Admin Panel</h1>
+                    <h2 class="text-2xl font-medium">
                         {% block section_title %} {% endblock %}
                     </h2>
                 </div>
