--- a/adminv2/templates/adminv2/blog/update-blog.html
+++ b/adminv2/templates/adminv2/blog/update-blog.html
@@ -7,12 +7,14 @@
     {{ form.media }}
 {% endblock %}
 
-{% block section_title %} Blog {% endblock %}
+{% block section_title %}Blog{% endblock %}
 
 {% block content %} 
     {% if article %}
-        <form action="{% url 'adminv2:update-blog' article.id %}" onsubmit="updateBlog(event)" class="max-w-2xl">
+        <form action="{% url 'adminv2:update-blog' article.id %}" onsubmit="updateBlog(event)" class="max-w-2xl self-center lg:self-start">
+            
             <div class="flex flex-col gap-3 lg:gap-4">
+                <h3 class="text-xl font-bold">Update Blog Article</h3>
                 <div>
                     <label for="id_title" class="label-primary">Title</label>
                     <input class="input-primary" type="text" name="title" value="{{ article.title }}" required id="id_title">
@@ -111,7 +113,7 @@
                     <label for="id_published" class="inline-flex items-center cursor-pointer">
                         <input type="checkbox" value="0" name="published" class="sr-only peer" id="id_published" {% if article.published %}checked{% endif %}>
                         <div class="relative w-11 h-6 bg-white peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-gray-200 after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all  peer-checked:bg-blue-600"></div>
-                        <span class="ms-3 text-sm font-medium text-gray-900">Published</span>
+                        <span class="ms-3 font-medium text-gray-900">Published</span>
                     </label>
                 </div>
 
@@ -155,6 +157,9 @@
         .then(data => {
             if(data.success){
                 showToastNotification('success', data.message);
+
+                article_url = '{% url 'blog:article' 123 %}'.replace('123', data.blog_slug)
+                window.location.href = article_url; //redirect to new article
             } else{
                 displayFormError(data.errors, form);
                 showToastNotification('warning', "Invalid form details");
