--- a/adminv2/templates/adminv2/listing/add.html
+++ b/adminv2/templates/adminv2/listing/add.html
@@ -1,14 +1,15 @@
 {% extends 'adminv2/base.html'%}
 {% load static %}
 
-{% block title %}{% endblock %}
+{% block title %}Create New Listings{% endblock %}
+{% block section_title %} Listings {% endblock %}
 
 {% block content %} 
-    <h1>Add Listing</h1>
 
-    <form method="post" enctype="multipart/form-data" class="max-w-2xl responsive-padding" onsubmit="submitForm(event)">
+    <form method="post" enctype="multipart/form-data" class="max-w-2xl self-center lg:self-start" onsubmit="submitForm(event)">
         {% csrf_token %}        
         <div class="flex flex-col gap-3 lg:gap-4">
+            <h3 class="text-xl font-bold">Create New Listing</h3>
             <div>
                 <label for="id_title" class="label-primary">Title</label>
                 <input class="input-primary" type="text" name="title" maxlength="40" required id="id_title">
